 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES

PIG-5282: Upgade to Java 8 (satishsaley via rohini)
 
IMPROVEMENTS

PIG-4764: Make Pig work with Hive 3.1 (szita)

PIG-5352: Please add OWASP Dependency Check to the build ivy.xml (knoguchi)

PIG-5385: Skip calling extra gc() before spilling large bag when unnecessary (knoguchi)

PIG-5389: Passing null to REPLACE udf preventing JIT optimization (knoguchi)

PIG-5382: Log the name when POStore fails on write (knoguchi)

PIG-5255: Improvements to bloom join (satishsaley via rohini)

PIG-5359: Reduce time spent in split serialization (satishsaley via rohini)

PIG-5357: BagFactory interface should support creating a distinct bag from a set (jtolar via rohini)

PIG-5354: Show fieldname and a line number for casting errors (knoguchi)

PIG-5342: Add setting to turn off bloom join combiner (satishsaley via rohini)

PIG-5349: Log stderr output when shell command fail (knoguchi)

PIG-3038: Support for Credentials for UDF,Loader and Storer (satishsaley via rohini)

PIG-5358: Remove hive-contrib jar from lib directory (szita)

PIG-5343: Upgrade developer build environment (nielsbasjes via szita)

PIG-5191: Pig HBase 2.0.0 support (nkollar via szita, reviewed by rohini)

PIG-5344: Update Apache HTTPD LogParser to latest version (nielsbasjes via szita)

PIG-4092: Predicate pushdown for Parquet (nkollar via rohini)

PIG-5317: Upgrade old dependencies: commons-lang, hsqldb, commons-logging (nkollar via rohini)

PIG-5322: ConstantCalculator optimizer is not applied for split (rohini)

PIG-5316: Initialize mapred.task.id property for PoS jobs (nkollar via szita)

PIG-5302: Remove HttpClient dependency (nkollar via szita)
